questions z-index fix

--- a/src/styles/questions.module.css
+++ b/src/styles/questions.module.css
@@ -24,7 +24,12 @@
   z-index: 10;
   transform: scale(1.1);
 }
-
+.z1 {
+  z-index: 1;
+}
+.z2 {
+  z-index: 2;
+}
 .question1Parent {
   width: 50%;
   color: #ededed;
